syntax = "proto3";

package ru.hse.lmsteam.proto.users.auth;

option java_multiple_files = true;
option java_package = "ru.hse.lmsteam.schema.api.users.auth";

import "google/protobuf/wrappers.proto";
import "ru/hse/lmsteam/proto/users/users_api.proto";

message AuthResponse {
  oneof result {
    Success success = 1;
    Failure failure = 2;
  }
}

message Login {
  message Response {
    AuthResponse response = 1;
  }
}

message ChangePassword {
  message Request {
    string login = 1;
    string old_password = 2;
    string new_password = 3;
  }

  message Response {
    AuthResponse response = 1;
  }
}

message SetPassword {
  message Request {
    reserved 1;
    string token = 2;
    string new_password = 3;
  }

  message Response {
    AuthResponse response = 1;
  }
}


message Success {
  string token = 1;
  ru.hse.lmsteam.proto.users.UserRoleNamespace.Role role = 2;
  string user_id = 3;
  string name = 4;
  string surname = 5;
  google.protobuf.StringValue patronymic = 6;
}

message Failure {
  string message = 4;
}